--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "mssql": "^9.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^3.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
