--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^1.31.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
