--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^6.4.6",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.10.2",
     "cloudinary": "^1.31.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
