--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^8.1.1",
     "@types/nodemailer": "^6.4.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.10.2",
@@ -33,7 +35,9 @@
     "mssql": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
