--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.ts",
-    "build": "npm install && tsc",
+    "build": "tsc",
     "start": "node ./dist/app.js"
   },
   "keywords": [],
