--- a/package.json
+++ b/package.json
@@ -6,49 +6,61 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.ts",
+    "dev:ts": "tsnd --respawn --transpile-only ./src/app.ts",
+    "tsdev": "tsnd --respawn  ./src/app.ts",
     "build": "tsc",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "start:dev": "node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/morgan": "^1.9.3",
-    "@types/mssql": "^8.1.1",
-    "@types/nodemailer": "^6.4.6",
-    "@types/swagger-jsdoc": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.3",
+    "@types/compression": "^1.7.2",
+    "@types/jsdom": "^20.0.1",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.10.2",
     "cloudinary": "^1.31.0",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "fs-extra": "^10.1.0",
+    "helmet": "^6.0.1",
+    "jsdom": "^20.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
-    "mssql": "^9.0.1",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "openai": "^3.1.0",
+    "openapi-types": "^12.0.2",
+    "puppeteer": "^19.3.0",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.21",
+    "@swc/helpers": "^0.4.14",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.4.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.10",
+    "@types/nodemailer": "^6.4.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
+    "regenerator-runtime": "^0.13.11",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   }
 }
