--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "start:dev": "node ./dist/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jorge Morales",
   "license": "ISC",
   "dependencies": {
     "@types/compression": "^1.7.2",
     "@types/jsdom": "^20.0.1",
+    "@types/sharp": "^0.31.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.10.2",
@@ -35,13 +36,16 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "node-gyp": "^9.3.0",
     "nodemailer": "^6.8.0",
     "openai": "^3.1.0",
     "openapi-types": "^12.0.2",
     "puppeteer": "^19.3.0",
+    "sharp": "0.30.2",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@swc/core": "^1.3.21",
@@ -62,5 +66,8 @@
     "regenerator-runtime": "^0.13.11",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": ">=18.12.1"
   }
 }
